# piper

./: .env.example  .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json
.hermes/plans/: 2026-03-28_095900-piper-recovery-and-execution-plan.md
docs/: ARCHITECTURE.md  BRD.md  DESIGN.md  DEVELOPMENT.md  ECOSYSTEM_MAP.md  TESTING.md  changelog.mdx
docs/adr/: 000-template.md  001-tech-stack.md  002-tdd-policy.md  003-documentation-structure.md  004-microsoft-graph-auth-flow.md  004-p2p-iroh-sync.md
docs/mistakes/: TEMPLATE.md
docs/plans/: 2026-03-27-next-implementation-phase.md  2026-03-27-piper-foundation-phase-1.md  2026-03-27-piper-phase2-interactive-views.md
docs/specs/: FEATURE_MAP.md  NEV-14-ms-lists-crud-spec.md  generic-adapter-framework.md  graph-integration.md  live-graph-smoke-test.md  msal-auth-integration.md  sync-engine.md  workspace-config.md
e2e/: app-startup.spec.ts  auth.spec.ts  crud.spec.ts  fixtures.ts  smoke.spec.ts
e2e/page-objects/: index.ts  kanban-view.po.ts  list-view.po.ts  sidebar.po.ts  task-detail.po.ts  topbar.po.ts
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/p2p/: mod.rs  presence.rs  protocol.rs  selective.rs  service.rs
src/__e2e__/: auth-flow-lifecycle.test.ts  crud-e2e.test.ts  error-scenarios.test.ts  ms-lists-integration.test.ts  rate-limiting.test.ts  sync-engine.test.ts
src/app/runtime/: piper-runtime-boundary.tsx
src/components/icons/: piper-logo.tsx
(+149 files in other folders)
