[package]
name = "piper"
version = "0.1.0"
description = "Piper desktop app built on Microsoft Lists / SharePoint Lists"
authors = ["Raisal"]
license = "Proprietary"
repository = "https://github.com/IEatCodeDaily/piper"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "piper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3" }
tauri-plugin-log = "2"
